# ancestry-app

./: .env.example  .gitignore  Makefile  README.md  build.sh  docker-compose.override.yml  docker-compose.yml  spec.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7cad6041afa2_initial_schema.py  b2c3d4e5f6a1_add_sources_to_persons.py  c3d4e5f6a7b2_add_person_name_indexes.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  media.py  person.py  relationship.py
backend/app/routers/: ai.py  auth.py  gedcom.py  media.py  persons.py  relationships.py  tree.py
backend/app/schemas/: person.py  relationship.py  tree.py
backend/app/services/: ai_extractor.py  tree_builder.py
backend/tests/: conftest.py  test_ai_extractor.py  test_ai_router.py  test_auth.py  test_gedcom.py  test_health.py  test_media.py  test_persons.py  test_relationships.py
docs/superpowers/plans/: 2026-06-22-mvp.md  2026-06-24-ai-document-extraction.md  2026-06-24-authentication.md  2026-06-25-performance.md  2026-06-25-portrait-face-detection.md  2026-06-25-security-batch1.md
docs/superpowers/specs/: 2026-06-22-phase1-foundation-design.md  2026-06-24-ai-document-extraction-design.md  2026-06-24-authentication-design.md  2026-06-25-portrait-face-detection-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: generate_report_index.py
tests/e2e/: conftest.py  test_smoke.py
(+23 files in other folders)
